[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Map/Objects/door.png" type="Texture" id=1]
[ext_resource path="res://Enemy/PlayerDetection.tscn" type="PackedScene" id=2]
[ext_resource path="res://Door/Door.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 17.0008, 10.8357 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 16.7545, 2.41817 )

[sub_resource type="CapsuleShape2D" id=6]
radius = 1.35148
height = 16.7787

[sub_resource type="OccluderPolygon2D" id=4]
polygon = PoolVector2Array( 15.4128, -9.81283, 16.4347, -6.84086, 17.5411, -6.9105, 17.0681, -3.17903, 15.8722, -4.96586, 14.9972, -7.02836, 14.1222, -8.27836, 13.7472, -9.40336, 12.6847, -10.5284, 11.6222, -11.5909, 10.2472, -12.2784, 8.93467, -13.0284, 6.93467, -13.5909, -1.25283, -13.7159, -5.62783, -13.3409, -7.12783, -13.3409, -8.06533, -13.7784, -9.00283, -13.9659, -11.0028, -12.7159, -12.0653, -11.2159, -13.0028, -9.71586, -14.1903, -8.02836, -17.1278, -4.52836, -17.1459, -7.06817, -16.2359, -6.73725, -16.0375, -8.91992, -15.0454, -8.91992, -15.0454, -10.7057, -13.8548, -10.9042, -14.0532, -11.7971, -12.9619, -11.9955, -13.0611, -12.7892, -12.069, -12.8884, -12.069, -13.9797, -9.88633, -13.9797, -9.98554, -14.8727, -7.00918, -14.8727, -7.2076, -15.7656, 6.97975, -15.8648, 7.17818, -15.1703, 9.55927, -15.1703, 10.0553, -14.079, 11.8412, -14.079, 12.0396, -13.186, 13.0317, -13.0868, 13.2301, -12.2931, 14.0238, -12.0947, 14.2222, -11.0034, 14.9167, -11.2018 )

[node name="Door" type="KinematicBody2D" groups=[
"respawnable",
]]
collision_mask = 2
script = ExtResource( 3 )

[node name="Door" type="Sprite" parent="."]
position = Vector2( -0.0936432, -16.3877 )
texture = ExtResource( 1 )
hframes = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.128048, -11.2764 )
shape = SubResource( 1 )

[node name="CloseDoor" parent="." instance=ExtResource( 2 )]
position = Vector2( -0.022934, -31.1656 )

[node name="CollisionShape2D" parent="CloseDoor" index="0"]
shape = SubResource( 5 )

[node name="PlayerDetection" parent="." instance=ExtResource( 2 )]
position = Vector2( 0.18729, -16.856 )

[node name="CollisionShape2D" parent="PlayerDetection" index="0"]
position = Vector2( 0, 18 )
rotation = 1.5708
shape = SubResource( 6 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
position = Vector2( 0.440125, -13.2026 )
occluder = SubResource( 4 )

[connection signal="body_entered" from="CloseDoor" to="." method="_on_CloseDoor_body_entered"]
[connection signal="body_entered" from="PlayerDetection" to="." method="_on_PlayerDetection_body_entered"]

[editable path="CloseDoor"]
[editable path="PlayerDetection"]
